--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-requests = "*"
-numpy = "*"
-pillow = "*"
-tensorflow-cpu = "*"
+flask = "2.0.3"
+requests = "2.26.0"
+numpy = "1.21.4"
+pillow = "8.4.0"
+tensorflow-cpu = "2.7.0"
 
 [dev-packages]
 
